--- a/cloudbuild-simple.yaml
+++ b/cloudbuild-simple.yaml
@@ -23,8 +23,10 @@ steps:
       - '--allow-unauthenticated'
       - '--port'
       - '8080'
+      - '--update-secrets'
+      - 'SECRET_KEY=django-secret-key:latest,DB_PASSWORD=db-password:latest'
       - '--set-env-vars'
-      - 'DJANGO_SETTINGS_MODULE=bank_parser.settings,DEBUG=False,DB_ENGINE=django.db.backends.postgresql,DB_NAME=money_tracking,DB_USER=postgres,DB_PASSWORD=postgres123,DB_HOST=/cloudsql/$PROJECT_ID:us-central1:money-tracking-db,DB_PORT=5432'
+      - 'DJANGO_SETTINGS_MODULE=bank_parser.settings,DEBUG=False,DB_ENGINE=django.db.backends.postgresql,DB_NAME=money_tracking,DB_USER=postgres,DB_HOST=/cloudsql/$PROJECT_ID:us-central1:money-tracking-db,DB_PORT=5432'
       - '--add-cloudsql-instances'
       - '$PROJECT_ID:us-central1:money-tracking-db'
 
