update to free db and dup entry check

--- a/.env.example
+++ b/.env.example
@@ -18,19 +18,14 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # For LOCAL DEVELOPMENT (SQLite)
 # --------------------------------
-DB_ENGINE=django.db.backends.sqlite3
-# DB_NAME is not used for SQLite (uses db.sqlite3 by default)
+# Leave DATABASE_URL empty or commented out to use SQLite locally
+# SQLite will automatically use db.sqlite3 by default
 
 
-# For PRODUCTION (Cloud SQL PostgreSQL)
+# For PRODUCTION (Supabase PostgreSQL)
 # --------------------------------
-# Uncomment these for production deployment:
-# DB_ENGINE=django.db.backends.postgresql
-# DB_NAME=money_tracking
-# DB_USER=postgres
-# DB_PASSWORD=your-secure-password-here
-# DB_HOST=/cloudsql/moneytracking-472503:us-central1:money-tracking-db
-# DB_PORT=5432
+# Uncomment and set your Supabase DATABASE_URL for production:
+# DATABASE_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
 
 
 # ============================================
@@ -48,7 +43,6 @@ DB_ENGINE=django.db.backends.sqlite3
 
 # GCP_PROJECT_ID=moneytracking-472503
 # GCP_REGION=us-central1
-# GCP_SQL_INSTANCE=money-tracking-db
 
 
 # ============================================
@@ -59,4 +53,6 @@ DB_ENGINE=django.db.backends.sqlite3
 # 2. Copy this file: cp .env.example .env
 # 3. Edit .env with your actual values
 # 4. .env is automatically ignored by git (.gitignore)
-# 5. For production, use Google Secret Manager for sensitive values
+# 5. For production, store SECRET_KEY and DATABASE_URL in Google Secret Manager
+# 6. To store DATABASE_URL in Secret Manager:
+#    gcloud secrets create database-url --data-file=- <<< "postgresql://user:pass@host:5432/db"
