--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ plotly>=5.17.0
 django-crispy-forms>=2.1
 crispy-bootstrap5>=0.7
 django-environ>=0.11.2
+dj-database-url>=2.1.0
 gunicorn>=21.2.0
 whitenoise>=6.6.0
 PyPDF2>=3.0.0
